--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
      <script src="https://kit.fontawesome.com/cba694c552.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+         <link rel="icon" href="calculator.png" />
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>avrage calc</title>
